// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fluent-linter-action Reports errors correctly matching problemMatcher: __fixtures__/invalid.conf 1`] = `
Object {
  "column": "0",
  "file": "<PROJECT_ROOT>/__fixtures__/invalid.conf",
  "line": "0",
  "message": "cannot initialize input plugin: john ",
  "severity": "error",
}
`;

exports[`fluent-linter-action Reports errors correctly matching problemMatcher: __fixtures__/invalid.conf 2`] = `
Object {
  "column": "0",
  "file": "<PROJECT_ROOT>/__fixtures__/invalid.conf",
  "line": "0",
  "message": "Unknown syslog mode abc            ",
  "severity": "error",
}
`;

exports[`fluent-linter-action Reports errors correctly matching problemMatcher: __fixtures__/invalid.conf 3`] = `
Object {
  "column": "0",
  "file": "<PROJECT_ROOT>/__fixtures__/invalid.conf",
  "line": "0",
  "message": "missing 'key_name'                 ",
  "severity": "error",
}
`;

exports[`fluent-linter-action Reports missing file with @INCLUDE: __fixtures__/scenarios/withInclude/tail.conf 1`] = `
Object {
  "column": "1",
  "file": "<PROJECT_ROOT>/__fixtures__/scenarios/withInclude/tail.conf",
  "line": "1",
  "message": "not read file, loading from <PROJECT_ROOT>/__fixtures__/scenarios/withInclude/wrongPathInclude.conf  ",
  "severity": "error",
}
`;
